--- a/maxcoin/package.json
+++ b/maxcoin/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "axios": "^0.20.0",
     "mongodb": "^3.6.2",
+    "mysql2": "^2.3.2",
     "nodemon": "^2.0.13"
   },
   "devDependencies": {
