--- a/shopper/package.json
+++ b/shopper/package.json
@@ -14,7 +14,9 @@
     "express": "~4.17.1",
     "express-session": "^1.17.1",
     "mongoose": "^5.10.9",
-    "pug": "~3.0.0"
+    "mysql2": "^2.3.2",
+    "pug": "~3.0.0",
+    "sequelize": "^6.7.0"
   },
   "devDependencies": {
     "eslint": "^7.10.0",
